style.css
/* ----------- FONTS ----------- */
@font-face {
  font-family: "Brandon Text Regular";
  src: url("fonts/BrandonText-Regular.otf") format("woff");
}
@font-face {
  font-family: "Brandon Text Bold";
  src: url("fonts/BrandonText-Bold.otf") format("woff");
}
@font-face {
  font-family: "Brandon Text Light";
  src: url("fonts/BrandonText-Light.otf") format("woff");
}
@font-face {
  font-family: "Brandon Text Thin";
  src: url("fonts/BrandonText-Thin.otf") format("woff");
}
@font-face {
  font-family: "Font Awesome 5";
  src: url("fonts/Font-Awesome-5-Free-Regular-400.otf") format("woff");
}

/* --------- VARIABLES -------- */
:root {
  --main-font: "Brandon Text Light", sans-serif;
  --link-font-size: 14px;
  --body-font: 16px;

  --light-beige: #eff0ea;
  --dark-beige: #e3e5d7;
  --light-blue: #3e4657;
  --dark-blue: #2a3141;
  --yellow: #ffff00;

  /* weather */
  --bg_main: #0a1f44;
  --text_light: #fff;
  --text_med: #53627c;
  --text_dark: #1e2432;
  --red: #ff1e42;
  --darkred: #c3112d;
  --orange: #ff8c00;
}
body {
  font-family: var(--main-font);
  margin: 0;
}

body {
  width: fit-content;
}

/* --------- TOP NAV -------- */
/* #topNavigation, */
#bottomNavigation {
  background-color: var(--light-beige);
  color: var(--dark-blue);
  /* margin: 10px; */
  /* box-shadow: 0 2px 10px rgba(226, 225, 225, 0.2); */
}
#topNavigation {
  position: fixed;
  width: -webkit-fill-available;
  z-index: 99;
  background-attachment: fixed;
  padding: 5px;

}
.logo {
  width: 60px;
  height: 60px;
}
#navBar {
  right: 0;
  top: 0;
  margin: 50px;
  position: absolute;
}
.navBarContent {
  display: flex;
  margin-inline-start: auto;
}
#navBar a {
  color: white;
  cursor: pointer;
  font-family: var(--main-font);
  text-decoration: none;
  margin: -20px 10px 10px 10px;
  font-size: 16px;
}
#navBar a:hover {
  border-bottom: 4px solid var(--dark-blue);
}

.addImage {
  background-position: bottom;
  filter: saturate(0.4);
  height: 130px;
  background: rgba(0, 0, 0, 0.7);
  /* background: var(--light-blue); */
}

/* --------- HERO SECTION -------- */
.banner {
  width: 30%;
  height: auto;
  text-align: center;
  position: absolute;
  top: 35%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 1;
  filter: drop-shadow(2px 4px 6px black);
}

.video-container {
  width: 100%;
  height: 100%;
  /* filter: contrast(80%); */
  filter: brightness(0.6);
  /* box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4); */
}

.video-container-Nav {
  height: 140px;
  width: 100%;
  /* filter: contrast(80%); */
  object-fit: cover;
  filter: brightness(0.5);
  box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4);
  display: none;
  background: rgba(0, 0, 0, 0.4);
}

.showVideo {
  display: block;
}
/* --------- IMAGES -------- */
.heroImg,
.tourImg1,
.tourImg2 {
  width: 100%;
  height: auto;
}

/* --------- SECTIONS -------- */
#intro,
#tours,
#seasonInfo,
#gallery,
#faqInfo {
  background: #2a3141;
  color: #fff;
  margin: 0;
  text-align: center;
  /* box-shadow: 0 1px 35px 5px rgba(0, 0, 0, 0.4); */
}
/* SEASON */
#seasonInfo h1 {
  margin: 0;
  font-family: var(--main-font);
  padding: 100px 300px;
  font-size: 20px;
}
/* --------- INTRO -------- */
.introTitle {
  text-transform: uppercase;
  padding-top: 50px;
  font-family: "Brandon Text Regular";
}
.introText {
  font-family: "Brandon Text Light";
  font-size: 18px;
}

#introText {
  position: absolute;
  top: 40%;
  padding: 0 230px;
  letter-spacing: 0.1em;
  text-align: center;
  font-size: var(--body-font);
}
/* --------- TRIPS -------- */
#tripArea {
  display: inline-flex;
  flex-direction: row-reverse;
  place-items: flex-end;
}

.wheel {
  width: 80px;
  height: auto;
  margin: 40px;
  animation: rotate 3s linear infinite;
}

@keyframes rotate {
  to {
    transform: rotate(360deg);
  }
}

#tripPrices {
  font-size: 15px;
  font-family: "Brandon Text Regular";
  text-align: left;
}
#singleTripArea {
  display: grid;
  align-items: center;
  max-width: fit-content;
  margin: 20px 25px 0 0px;
  transition: transform 0.5s;
}

/* #singleTripArea:hover,
#singleTripArea:focus {
  transform: scale3d(1.05, 1.05, 1);
} */

.tripTitle {
  margin: 10px 0;
  text-align: center;
  font-size: var(--body-font);
}
.tripText {
  padding-top: 20px;
  text-align: justify;
  margin: 0;
}
.duration {
  font-family: "Brandon Text Bold";
  margin: 10px 0;
  font-size: 14px;
}

#trips {
  text-align: center;
}

.tripImg {
  width: 220px;
}
.tripsDeco {
  height: auto;
  width: 270px;
  position: absolute;
  margin-top: 360px;
}
.tripsDeco:last-of-type {
  margin-top: 170px;
}
.readMoreTrip {
  justify-self: self-end;
  font-size: 12px;
  margin-bottom: 50px;
  background-color: white;
  text-transform: uppercase;
  color: var(--dark-blue) !important;
  border: solid 1px var(--dark-blue);
  border-radius: 5px;
  cursor: pointer;
  padding: 8px 20px;
  font-family: var(--main-font);
  box-shadow:
  0 2.8px 2.2px rgba(0, 0, 0, 0.02),
  0 6.7px 5.3px rgba(0, 0, 0, 0.028),
  0 12.5px 10px rgba(0, 0, 0, 0.035),
  0 22.3px 17.9px rgba(0, 0, 0, 0.042),
  0 41.8px 33.4px rgba(0, 0, 0, 0.05),
  0 100px 80px rgba(0, 0, 0, 0.07)
;


}
#timelineGrid {
  display: grid;
  grid-template-columns: 0.1fr 0.5fr 0.1fr;
  grid-template-rows: repeat(5, 1fr);
  grid-template-areas:
    "img1 vl ."
    ". vl img2"
    "img3 vl ."
    ". vl img4"
    "img5 vl .";
}
.vl {
  grid-area: vl;
  border-left: 2px solid var(--light-blue);
  height: 1500px;
  position: absolute;
  left: 50%;
  margin-left: 0;
  top: 75%;
  stroke-width: 5;
  stroke-dasharray: 15, 310;
  stroke-dashoffset: 48;
  transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
}
.tripsTimelineImg {
  width: 300px;
  display: block;
  margin: auto;
}
.tripsTimelingLoc {
  display: flex;
  align-items: flex-end;
  justify-content: center;
}
.tripsTimelineImg:nth-of-type(1n) {
  grid-area: img1;
  margin: 60px 0 0 50px;
}
.location1 {
  grid-area: img1;
}
.tripsTimelineImg:nth-of-type(2n),
.location2 {
  grid-area: img2;
}
/* ... */

